take over improvement ideas from zuluj (error handling, initStateTable)