@@ -85,8 +85,8 @@ public class InputReader implements InputReaderIntf, Cloneable {
 	}
 
 	public static String fileToString(String fileName) throws Exception {
-		Path filePath = Paths.get(fileName);
-		String content = Files.readAllBytes(filePath).toString();
+		Path filePath = Path.of(fileName);
+		String content = Files.readString(filePath);
 		return content;
 	}
 }
